// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H3 /> renders with a color prop 1`] = `
<Component
  style={
    Object {
      "color": "#fff",
      "fontSize": 28,
    }
  }
>
  mockText
</Component>
`;

exports[`<H3 /> renders with just text 1`] = `
<Component
  style={
    Object {
      "color": "#000000",
      "fontSize": 28,
    }
  }
>
  mockText
</Component>
`;
